# sample

./: .gitignore  .isort.cfg   .pre-commit-config.yaml  Claude.txt  ColPali_ColQwen2.ipynb  Dockerfile  E2E_RAG_ColPali_ColQwen.ipynb  LLM_Chat.ipynb  README.md  Response.md  SACHIN JALOTA - HDFC ProblemStatement & Solution.pptx  VectorStores.txt  claude.py  duck.ai_1754979004061.txt  duck.ai_2025-06-12_17-00-45.txt  got-oss:120b.md  makefile  platform_service.txt  pyproject.toml  requirements.txt  tasks.md  temp.md  temp.txt  test.txt
src/: config.py  example_env  logging_config.py  main.py
src/api/prompts/: default_prompts.py
src/api/routers/: generate_qna.py  image_input_completion_router.py  text_completion_router.py  upload_file_router.py
src/api/utility/: file_upload_service.py  gaurdrails.py
src/cloud_storage/: storage_service.py
src/llm/: openai_client.py
src/models/: custom_response.py  generate_qna_payload.py  image_input.py  text_input.py  upload_object_payload.py
src/utility/: helper.py
tests/integration/: health_check_tests.py  image_completion_router_tests.py  text_completion_router_tests.py
tests/unit/: text_completion_router_tests.py
